bug fix center alignment and margin errors

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 .content {
-	max-width: 1000px
+	max-width: 1000px;
+	display: block;
+	margin: auto;
 }
 .logo-img {
 	height: 100px;
